--- a/gkeyll/Makefile-gkeyll
+++ b/gkeyll/Makefile-gkeyll
@@ -19,7 +19,7 @@ CORE_INCS := -I../core/minus -I../core/zero
 PROJ_INSTALL_LIB_DIR := ${INSTALL_PREFIX}/${PROJ_NAME}/lib
 PROJ_INSTALL_INC := -I${INSTALL_PREFIX}/${PROJ_NAME}/include
 TCC_EXEC := ${PREFIX}/tcc/bin/tcc
-TCC_RUN_CMD := -run $$\1
+TCC_RUN_CMD := -run $$\@
 
 # Core libraries to link to
 CORE_LIB_DIR := -L../${BUILD_DIR}/core
