--- a/moments/Makefile-moments
+++ b/moments/Makefile-moments
@@ -133,7 +133,7 @@ valcheck: unit ## Run valgrind on unit test
 -include $(DEPS)
 
 # Headers to install
-INSTALL_HEADERS := $(shell ls apps/gkyl_*.h zero/gkyl_*.h amr/gkyl_*.h $(KERNELS_DIR)/*/gkyl_*.h | grep -v "priv" | sort)
+INSTALL_HEADERS := $(shell ls apps/gkyl_*.h zero/gkyl_*.h amr/gkyl_*.h | grep -v "priv" | sort)
 
 .PHONY: install
 install: all
