--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -33,8 +33,8 @@ jobs:
     - name: install-deps
       run: cd install-deps; ./mkdeps.sh --build-superlu=yes; cd ..
     - name: make
-      run: make CC=clang -j LAPACK_INC="${{ steps.dependencies.openblas-inc }} ${{ steps.dependencies.lapacke-inc }}" LAPACK_LIB="${{ steps.dependencies.openblas-lib }} ${{ steps.dependencies.lapack-lib }} ${{ steps.dependencies.lapacke-lib }}"
+      run: make CC=clang -j LAPACK_INC="${{ steps.dependencies.outputs.openblas-inc }} ${{ steps.dependencies.outputs.lapacke-inc }}" LAPACK_LIB="${{ steps.dependencies.outputs.openblas-lib }} ${{ steps.dependencies.outputs.lapack-lib }} ${{ steps.dependencies.outputs.lapacke-lib }}"
     - name: make check
-      run: make CC=clang check -j LAPACK_INC="${{ steps.dependencies.openblas-inc }} ${{ steps.dependencies.lapacke-inc }}" LAPACK_LIB="${{ steps.dependencies.openblas-lib }} ${{ steps.dependencies.lapack-lib }} ${{ steps.dependencies.lapacke-lib }}"
+      run: make CC=clang check -j LAPACK_INC="${{ steps.dependencies.outputs.openblas-inc }} ${{ steps.dependencies.outputs.lapacke-inc }}" LAPACK_LIB="${{ steps.dependencies.outputs.openblas-lib }} ${{ steps.dependencies.outputs.lapack-lib }} ${{ steps.dependencies.outputs.lapacke-lib }}"
     - name: make regression
       run: make -j regression
