--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -33,7 +33,7 @@ jobs:
     - name: install-deps
       run: cd install-deps; ./mkdeps.sh --build-superlu=yes; cd ..
     - name: make
-      run: make CC=clang -j LAPACK_INC="${{ steps.dependencies.outputs.openblas-inc }} ${{ steps.dependencies.outputs.lapacke-inc }}" LAPACK_LIB="${{ steps.dependencies.outputs.openblas-lib }} ${{ steps.dependencies.outputs.lapack-lib }} ${{ steps.dependencies.outputs.lapacke-lib }}"
+      run: make CC=clang -j LAPACK_INC="${{ steps.dependencies.outputs.openblas-inc }}" LAPACK_LIB="${{ steps.dependencies.outputs.openblas-lib }} ${{ steps.dependencies.outputs.lapack-lib }} ${{ steps.dependencies.outputs.lapacke-lib }}"
     - name: make check
       run: make CC=clang check -j LAPACK_INC="${{ steps.dependencies.outputs.openblas-inc }} ${{ steps.dependencies.outputs.lapacke-inc }}" LAPACK_LIB="${{ steps.dependencies.outputs.openblas-lib }} ${{ steps.dependencies.outputs.lapack-lib }} ${{ steps.dependencies.outputs.lapacke-lib }}"
     - name: make regression
